Work in progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,13 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "iostream": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "cstring": "cpp",
+        "map": "cpp",
+        "fstream": "cpp",
+        "cinttypes": "cpp",
+        "optional": "cpp",
+        "list": "cpp",
+        "variant": "cpp"
     }
 }
